Fix footer column wrapping.

--- a/components/byu-footer/byu-footer.sass
+++ b/components/byu-footer/byu-footer.sass
@@ -79,7 +79,6 @@
 
 
   ::slotted(*)
-    flex-grow: 1
     margin: $spacing3 $spacing2 0
     padding: 0 $spacing4
 
@@ -114,7 +113,7 @@ $calcSubtractWidth: ($spacing2 + $spacing3) * 2
     flex-direction: row
 
     ::slotted(*)
-      width: calc(50% - #{$calcSubtractWidth})
+      width: calc(45% - #{$calcSubtractWidth})
 
 
     ::slotted(.double-wide)
